# ai-dev-tools-zoomcamp

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
01-overview/: README.md
03-mcp/: CONTEXT7_LIBRARY_IDS.md  README.md
04-build-coding-agent/codealong/: .gitignore  main.py  pyproject.toml
04-build-coding-agent/codealong/MCP/: CONTEXT7_LIBRARY_IDS.md
06-automation-lowcode/: README.md
cohorts/2025/01-overview/: HOMEWORK_ANSWERS.md
cohorts/2025/01-overview/01-todo/: README.md  db.sqlite3
cohorts/2025/02-end-to-end/02-coding-interview-v0.1-ABANDONED/: AGENTS.md  IMPLEMENTATION_PLAN.md  PRODUCT_SPECS.md  Q1_INITIAL_PROMPT.md  Q2_ANSWER.md  README.md  package-lock.json  package.json
cohorts/2025/02-end-to-end/02-coding-interview-v0.2/: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  DOCKER_GUIDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  PRODUCT_SPECS.md  README.md  docker-compose.yml  package-lock.json  package.json
cohorts/2025/02-end-to-end/02-coding-interview-v0.2/backend/: .env.example  main.py  pyproject.toml
cohorts/2025/02-end-to-end/02-coding-interview-v0.2/backend/app/: __init__.py
cohorts/2025/02-end-to-end/02-coding-interview-v0.2/backend/app/models/: session.py
cohorts/2025/02-end-to-end/02-coding-interview-v0.2/backend/app/routers/: sessions.py  websocket.py
cohorts/2025/02-end-to-end/02-coding-interview-v0.2/backend/app/services/: connection_manager.py  session_store.py
cohorts/2025/02-end-to-end/02-coding-interview-v0.2/backend/tests/: test_health.py  test_sessions.py  test_websocket.py
(+57 files in other folders)
