[project]
name = "coding-interview-backend"
version = "0.2.0"
description = "Real-time collaborative coding interview platform - Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "starlette>=0.50.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
]
